--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </ol>
     <hr>
     <h2>Contacts</h2>
-    <a href="<!DOCTYPE html>.contact.html"><p><em><strong>see more details</strong></em></p></a>
+    <a href="contact.html"><p><em><strong>see more details</strong></em></p></a>
     <h2>Education Background</h2>
-    <a href="<!DOCTYPE html>.education.html"><p><em><strong>see more details</strong></em></p></a>
+    <a href="education.html"><p><em><strong>see more details</strong></em></p></a>
     <hr>
     <h2>Experience</h2> 
     <table border="1">
