--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h2>Contacts</h2>
     <a href="contact.html"><p><em><strong>see more details</strong></em></p></a>
     <h2>Education Background</h2>
-    <a href="education.html"><p><em><strong>see more details</strong></em></p></a>
+    <a href="https://www.w3cschool.cn/exam/score?paperid=6123&stem=exam"><p><em><strong>see more details</strong></em></p></a>
     <hr>
     <h2>Experience</h2> 
     <table border="1">
